[tool.pdm]

[project]
name = "testproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Kevin Jobs", email = "me@kevinjobs.com"},
]
dependencies = [
    "selenium>=4.8.0",
    "flake8>=5.0.4",
    "pytest>=7.2.1",
    "beautifulsoup4>=4.11.2",
    "requests>=2.28.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
